# Cpp-CMake-Template

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.E0417DD8CDB5FA14.idx  test.cpp.C883021E642C975E.idx  test.hpp.8D730546A5FE192C.idx
src/: main.cpp  test.cpp
